Updating the templates

--- a/templates/hospital.html
+++ b/templates/hospital.html
@@ -13,7 +13,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/tests">Home </a>
                 </li>
                 <li class="nav-item">
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/nearby">Near Me <span class="sr-only">(current)</span></a>
+                  <a class="nav-link active" href="/nearby">Near Me <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/prescription">Prescriptions</a>
