--- a/templates/shop.html
+++ b/templates/shop.html
@@ -13,14 +13,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/tests">Home </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/doctor_list">Consult a Doctor</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/shop">Pharmacy  <span class="sr-only">(current)</span></a>
+                  <a class="nav-link active" href="/shop">Pharmacy  <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/nearby">Near Me</a>
