--- a/templates/prescription.html
+++ b/templates/prescription.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Payment Confirmation</title>
+        <title>Consult a Doctor</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="../static/css/styles.css " type="text/css">
       </head>
@@ -14,19 +14,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="/tests">Home</a>
+                  <a class="nav-link" href="/tests">Home </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/doctor_list">Consult a Doctor</a>
+                  <a class="nav-link" href="/doctor_list">Consult a Doctor </a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="/shop">Pharmacy <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="/shop">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/nearby">Near Me</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/prescription">Prescriptions</a>
+                  <a class="nav-link active" href="/prescription">Prescriptions <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
@@ -34,13 +34,30 @@
               </ul>
             </div>
           </nav>
-
-          <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-              <h1 class="display-4">Payment Successful. Total Transaction of Rs 100</h1>
-              <p class="lead">Your order is confirmed.</p>
-            </div>
+          <h1 class="text-center">List of all your Prescriptions</h1>
+          <div class="container box">
+              <div class="row">
+                  <div class="col-8">
+                      <p>
+                          <strong>Doctor Name: </strong> 
+                      </p>
+                      <p>
+                          <strong>Problem/Illness: </strong> 
+                      </p>
+                      <p>
+                          <strong>Medicine: </strong>
+                      </p>
+                      <p>
+                          <strong>Quantity: </strong> 
+                      </p>
+                      <p>
+                          <strong>Date: </strong> 
+                      </p>
+                  </div>                 
+              </div>
           </div>
+          
+          <br><br><br><br><br><br>
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
