Linking Prescription to Mongo

--- a/templates/doctor_vc.html
+++ b/templates/doctor_vc.html
@@ -29,7 +29,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe src="https://zipcall.io/join/sdsd2001" title="call" height="500" width="100%">
+                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsd2001" title="call" height="700" width="100%">
                       </iframe>
                   </div>
               </div>
@@ -44,14 +44,18 @@
                   <textarea id="illness-details" name="details" rows="4" cols="50">
 
                   </textarea>
-                    <input class="form-control mr-sm-2" type="text" placeholder="Medicine" aria-label="Medicine">
+                    <input class="form-control mr-sm-2" name='Med' type="text" placeholder="Medicine" aria-label="Medicine">
                     <label for="medicine"></label>
 
-                    <select name="meds" id="meds">
+                    <select name="qnty" id="meds">
                       <option value="1">1</option>
                       <option value="2">2</option>
                       <option value="3">3</option>
                       <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
                     </select>
                     <button class="btn btn-success my-2 my-sm-0" type="submit">Submit</button>
                   </form>
