--- a/templates/prescription.html
+++ b/templates/prescription.html
@@ -35,7 +35,7 @@
             </div>
           </nav>
           <h1 class="text-center">List of all your Prescriptions</h1>
-          {%for i in p.find():%}
+          {% for i in p.find().sort([("_id", -1)]): %}
           <div class="container box">
               <div class="row">
                   <div class="col-8">
