--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/login">Login <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/">Login <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/register">Register</a>
@@ -94,8 +94,13 @@
       </form>
     </div>
   </div>
-
 </div>
+<br><br><br>
+<div align='center'>
+<a href="/face_login">
+<button type="submit" class="btn btn-primary">Try Face Recognition</button>
+</a>
+<div>
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
