Restructuring the codebase

--- a/templates/doctor_vc.html
+++ b/templates/doctor_vc.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <title>Video Chat</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="..\static\css\styles.css " type="text/css">
       </head>
@@ -29,7 +29,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsd20011" title="call" height="700" width="100%">
+                      <iframe allow="geolocation; microphone; camera; midi; encrypted-media;" src="https://zipcall.io/join/sdsdvc11" title="call" height="700" width="100%">
                       </iframe>
                   </div>
               </div>
