--- a/templates/register.html
+++ b/templates/register.html
@@ -14,10 +14,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                      <a class="nav-link" href="/login">Login</a>
+                      <a class="nav-link" href="/">Login</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="register.html">Register <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/register">Register <span class="sr-only">(current)</span></a>
                       </li>
               </ul>
             </div>
